# cargo-graph

./: Cargo.toml  README.md  main_flow.dot  render_flow.dot
examples/: render_flow.rs
src/: lib.rs  main.rs
src/graph/: flow_graph.rs  mod.rs  node_type.rs
src/passes/: analyzer.rs  builder.rs  collector.rs  mod.rs  parser.rs  renderer.rs  styler.rs
src/style/: edge_style.rs  mod.rs  node_style.rs
